--- a/BloodDonation.csproj
+++ b/BloodDonation.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="MySql.Data" Version="8.0.30" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models" />
+    </ItemGroup>
+
 </Project>
